add zabbix scripts
add zabbix scripts monitor web code and post json

--- a/zookeeper/zoo.cfg
+++ b/zookeeper/zoo.cfg
@@ -27,4 +27,11 @@ clientPort=2181
 # Purge task interval in hours
 # Set to "0" to disable auto purge feature
 #autopurge.purgeInterval=1
+#集群才需要下面的配置，每台对应一个ID
+#echo "1" > /data/zookeeper/data/myid
+#echo "2" > /data/zookeeper/data/myid
+#echo "3" > /data/zookeeper/data/myid
 server.1=10.XX.xX.XX:2888:3888
+server.2=10.XX.xX.XX:2888:3888
+server.3=10.XX.xX.XX:2888:3888
+
