--- a/mysql/5.7/my_5.7.cnf
+++ b/mysql/5.7/my_5.7.cnf
@@ -2,6 +2,7 @@
 [client]
 port = 3306
 socket = /tmp/mysql.sock
+default_character_set=utf8mb4
 
 [mysqld]
 ########basic settings########
@@ -12,6 +13,7 @@ bind_address = 0.0.0.0
 autocommit = 1
 character_set_server=utf8mb4
 collation-server=utf8mb4_general_ci
+init_connect='SET NAMES utf8mb4'
 lower_case_table_names = 0
 skip_name_resolve = 1
 max_connections = 5000
