--- a/mysql/5.7/my_5.7.cnf
+++ b/mysql/5.7/my_5.7.cnf
@@ -24,10 +24,10 @@ explicit_defaults_for_timestamp = 1
 join_buffer_size = 128M
 tmp_table_size = 64M
 tmpdir = /data/mysql_tmpdir
-max_allowed_packet = 32M
+max_allowed_packet = 1024M # 限制mysql服务端接收到的包的大小,避免mysql server has gone away
 sql_mode = "STRICT_TRANS_TABLES,NO_ENGINE_SUBSTITUTION,NO_ZERO_DATE,NO_ZERO_IN_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER"
-interactive_timeout = 1800
-wait_timeout = 1800
+interactive_timeout = 86400 # 指的是mysql在关闭一个交互的连接之前所要等待的秒数,避免mysql server has gone away
+wait_timeout = 86400 #指的是mysql在关闭一个非交互的连接之前所要等待的秒数,避免mysql server has gone away
 read_buffer_size = 16M
 read_rnd_buffer_size = 64M
 sort_buffer_size = 32M
