--- a/ansible/playbook/dkpark/dk-fe.yml
+++ b/ansible/playbook/dkpark/dk-fe.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: dk-ng
+- hosts: "{{ dkserver }}"
   remote_user: root
   gather_facts: no
   vars:
@@ -8,17 +8,16 @@
 
   tasks:  
   - name: create dir 
-    shell: |
-      mkdir -p {{ fedir }}
+    file: path={{ fedir }} state=directory
 
-  - name: rsync install
-    yum: name={{ software }}
+  #- name: rsync install
+  #  yum: name={{ software }}
 
-  - name: configure ssh connection no password
-    block:
-     - copy: src="../config/myansible.pub" dest="/tmp/authorized_keys"
-     - file: path="~/.ssh" state=directory
-     - shell: cat /tmp/authorized_keys >> ~/.ssh/authorized_keys && rm -rf /tmp/authorized_keys
+  #- name: configure ssh connection by sshkey
+  #  block:
+  #   - copy: src="../config/myansible.pub" dest="/tmp/authorized_keys"
+  #   - file: path="~/.ssh" state=directory
+  #   - shell: cat /tmp/authorized_keys >> ~/.ssh/authorized_keys && chmod 600 ~/.ssh/authorized_keys && rm -rf /tmp/authorized_keys
 
   - name: sync fe file
-    synchronize: src=./fe/ dest={{fedir}}
+    synchronize: src=./fe/test/ dest={{fedir}}
