--- a/ansible/playbook/dkpark/dkpark.yml
+++ b/ansible/playbook/dkpark/dkpark.yml
@@ -1,5 +1,5 @@
 ---
-- hosts: dk-java
+- hosts: bigops
   remote_user: root
   gather_facts: no
   vars:
@@ -13,11 +13,11 @@
       mkdir -p /data/servers/{dkpark-backend,dkpark-job,dkpark-mock,dkpark-service}  
       mkdir -p  /data/etc/projects/ /data/dkpark/download_file/ /dkpark_source/fe/
   
-  - name: configure ssh connection no password
+  - name: configure ssh connection by sshkey
     block:
      - copy: src="../config/myansible.pub" dest="/tmp/authorized_keys" 
      - file: path="~/.ssh" state=directory
-     - shell: cat /tmp/authorized_keys >> ~/.ssh/authorized_keys && rm -rf /tmp/authorized_keys
+     - shell: cat /tmp/authorized_keys >> ~/.ssh/authorized_keys && chmod 600 ~/.ssh/authorized_keys && rm -rf /tmp/authorized_keys
 
   - name: rsync install
     yum: name={{software}}
